syntax = "proto3";

option go_package = "/fault";

message Fault {
  enum Code {
    UNKNOWN = 0;

    // Bad input error
    InvalidParam = 1;
    IOError = 2;
    InvalidProtoBuff = 3;
    InvalidJSON = 4;
    InvalidBody = 5;

    // Server side error
    DBError = 100;
  }

  Code code = 1;
  string message = 2;
}
